Update services.css trying to fix overflow from phone

--- a/css/services.css
+++ b/css/services.css
@@ -7,6 +7,7 @@ details {
     sans-serif;
   width: 70%;
   max-width:35em;
+min-width: 17em;
   color: var(--primaryColor)
 }
 
